View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023296 | Community | OCCT:Modeling Algorithms | public | 2012-07-17 13:28 | 2012-11-16 13:17 |
Reporter | Pawel | Assigned To | Pawel | ||
Priority | normal | Severity | tweak | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Product Version | 6.5.3 | ||||
Target Version | 6.5.4 | Fixed in Version | 6.5.4 | ||
Summary | 0023296: Not verifying method return flag | ||||
Description | In BOPTools_Tools3D.cxx, lines 512 and 514 a flag indicating method success is obtained but only once verified. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
related to | 0021762 | closed | Open CASCADE | Integration new Boolean Operation algorithm to OCC |
|
Corresponding git branch pushed. Please review. |
|
Reviewed. Please test. |
|
Dear BugMaster, Branch CR23296 (and products from GIT master) was compiled on Linux and Windows platforms and tested. Regressions: Not detected Improvements: Not detected Testing case: Not needed |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-07-17 13:28 | Pawel | New Issue | |
2012-07-17 13:28 | Pawel | Assigned To | => Pawel |
2012-07-17 13:39 | Pawel | Note Added: 0021008 | |
2012-07-17 13:39 | Pawel | Assigned To | Pawel => bugmaster |
2012-07-17 13:39 | Pawel | Status | new => resolved |
2012-07-18 08:47 |
|
Assigned To | bugmaster => emv |
2012-07-18 08:48 |
|
Relationship added | related to 0021762 |
2012-08-08 10:08 |
|
Note Added: 0021211 | |
2012-08-08 10:08 |
|
Status | resolved => reviewed |
2012-08-09 11:34 | apn | Assigned To | emv => apn |
2012-08-09 13:11 | apn | Note Added: 0021223 | |
2012-08-09 13:12 | apn | Test case number | => Not needed |
2012-08-09 13:12 | apn | Assigned To | apn => bugmaster |
2012-08-09 13:12 | apn | Status | reviewed => tested |
2012-08-13 15:38 | Pawel | Changeset attached | => occt master 8fb480b3 |
2012-08-13 15:38 | Pawel | Assigned To | bugmaster => Pawel |
2012-08-13 15:38 | Pawel | Status | tested => verified |
2012-08-13 15:38 | Pawel | Resolution | open => fixed |
2012-11-16 13:14 | bugmaster | Fixed in Version | => 6.5.4 |
2012-11-16 13:17 | bugmaster | Status | verified => closed |