0023296: Not verifying method return flag

Checking the returned flag. If the method fails return.